# Masquerade-Source

./: CACHING_EXPLAINED.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  Paths_lin.cmake  Paths_win.cmake  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  TODO.md  cmake_generator.bat  masquerade.aps  masquerade.desktop.in  masquerade.rc  shell_minimal.html  vcpkg.json
.github/workflows/: build.yml
assets/: CONFIG.ini
assets/internal/: cheats.txt
assets/internal/pgo/: masquerade!1.pgc  masquerade!2.pgc  masquerade!3.pgc
assets/internal/shaders/: blend.shaders  passthrough.shaders
assets/ui/config/: IMGUI.ini
bios/: bios.h
cheats/: cheats.cpp  cheats.h
chip8/: chip8.cpp  chip8.h  chip8_mods.cpp
core/: abstractEmulation.h  defaults.h  masquerade.cpp
gameOfLife/: gameOfLife.cpp  gameOfLife.h
gb-gbc/: gbc.cpp  gbc.h  gbc_mods.cpp  gbc_opcodes.cpp
gba/: gba.cpp  gba.h  gba_mods.cpp  gba_opcodes.cpp
helpers/: helpers.h
masquerade-OTA/: masquerade-OTA.vcxproj  masquerade-OTA.vcxproj.filters
nes/: nes.cpp  nes.h  nes_mods.cpp  nes_opcodes.cpp
ota/: masquerade-OTA.cpp  ota.cpp  ota.h
pacMan/: pacMan.cpp  pacMan.h  pacMan_mods.cpp  pacMan_opcodes.cpp
spaceInvaders/: spaceInvaders.cpp  spaceInvaders.h  spaceInvaders_mods.cpp  spaceInvaders_opcodes.cpp
ui/: glad.c  imgui_custom_config.h  resource.h
ui/KHR/: khrplatform.h
ui/glad/: glad.h
